--- a/AplicativoDeViagens/Telas/Base.lproj/Main.storyboard
+++ b/AplicativoDeViagens/Telas/Base.lproj/Main.storyboard
@@ -283,16 +283,15 @@
                                         <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nn3-uc-XsB">
-                                        <rect key="frame" x="0.0" y="33" width="290" height="34"/>
+                                    <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="KYG-mR-t6d">
+                                        <rect key="frame" x="0.0" y="33" width="290" height="45"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="34" id="h1k-pD-1Fw"/>
+                                            <constraint firstAttribute="height" constant="45" id="Ig1-9M-piG"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
-                                    </textField>
+                                    </searchBar>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6 pacotes encontrados" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UHo-wl-4W3">
-                                        <rect key="frame" x="0.0" y="70" width="290" height="30"/>
+                                        <rect key="frame" x="0.0" y="81" width="290" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="aai-cF-ZcE"/>
                                         </constraints>
@@ -301,7 +300,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3w8-10-KwH">
-                                        <rect key="frame" x="0.0" y="103" width="290" height="376"/>
+                                        <rect key="frame" x="0.0" y="114" width="290" height="365"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ulf-p3-MNH">
                                             <size key="itemSize" width="135" height="160"/>
@@ -403,6 +402,8 @@
                     <tabBarItem key="tabBarItem" title="Pacotes" id="KE7-3S-NPF"/>
                     <connections>
                         <outlet property="colecaoPacote" destination="3w8-10-KwH" id="unz-xJ-2VN"/>
+                        <outlet property="contadorPacotes" destination="UHo-wl-4W3" id="Ji7-f7-ilF"/>
+                        <outlet property="pesquisarViagens" destination="KYG-mR-t6d" id="hlm-xa-081"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mJg-mb-YJf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
