--- a/AplicativoDeViagens/Telas/Base.lproj/Main.storyboard
+++ b/AplicativoDeViagens/Telas/Base.lproj/Main.storyboard
@@ -479,19 +479,19 @@
                                             </stackView>
                                         </subviews>
                                     </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="o que está incluso:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b0z-x8-J8n">
+                                        <rect key="frame" x="0.0" y="142" width="355" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
+                                        <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yb3-1a-CVZ">
-                                        <rect key="frame" x="0.0" y="142" width="355" height="1"/>
+                                        <rect key="frame" x="0.0" y="165.5" width="355" height="1"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="j1a-Tu-KmG"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="o que está incluso:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b0z-x8-J8n">
-                                        <rect key="frame" x="0.0" y="143" width="355" height="23.5"/>
-                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
-                                        <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Hcx-OA-F7k">
                                         <rect key="frame" x="0.0" y="166.5" width="355" height="90"/>
                                         <subviews>
@@ -501,19 +501,24 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OO2-Bn-M8x">
                                                         <rect key="frame" x="0.0" y="0.0" width="118.5" height="90"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="passagem aérea" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BjO-sh-FJD">
-                                                                <rect key="frame" x="0.0" y="51" width="106.5" height="21"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_airplane.png" translatesAutoresizingMaskIntoConstraints="NO" id="9ki-9O-6c9">
+                                                                <rect key="frame" x="36" y="8" width="46.5" height="50"/>
+                                                            </imageView>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="passagem aérea" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BjO-sh-FJD">
+                                                                <rect key="frame" x="7.5" y="66" width="103" height="19.5"/>
                                                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                                                 <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_airplane.png" translatesAutoresizingMaskIntoConstraints="NO" id="9ki-9O-6c9">
-                                                                <rect key="frame" x="33" y="8" width="35" height="35"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        <constraints>
+                                                            <constraint firstItem="BjO-sh-FJD" firstAttribute="top" secondItem="9ki-9O-6c9" secondAttribute="bottom" constant="8" id="HpF-wx-tpC"/>
+                                                            <constraint firstItem="9ki-9O-6c9" firstAttribute="leading" secondItem="OO2-Bn-M8x" secondAttribute="leading" constant="36" id="MrO-f2-RIa"/>
+                                                            <constraint firstItem="BjO-sh-FJD" firstAttribute="centerX" secondItem="OO2-Bn-M8x" secondAttribute="centerX" id="XYx-wn-bR1"/>
+                                                            <constraint firstAttribute="trailing" secondItem="9ki-9O-6c9" secondAttribute="trailing" constant="36" id="e0T-og-ENU"/>
+                                                            <constraint firstItem="9ki-9O-6c9" firstAttribute="top" secondItem="OO2-Bn-M8x" secondAttribute="top" constant="8" id="ohP-1b-zqi"/>
+                                                        </constraints>
                                                     </view>
                                                 </subviews>
                                             </stackView>
@@ -523,19 +528,24 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s6p-bM-xU2">
                                                         <rect key="frame" x="0.0" y="0.0" width="118" height="90"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="hotel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2T-TV-UPB">
-                                                                <rect key="frame" x="0.0" y="53" width="107" height="21"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hotel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2T-TV-UPB">
+                                                                <rect key="frame" x="43" y="66" width="32.5" height="19.5"/>
                                                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                                                 <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_hotel.png" translatesAutoresizingMaskIntoConstraints="NO" id="HVn-8C-qtq">
-                                                                <rect key="frame" x="36" y="10" width="35" height="35"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_hotel.png" translatesAutoresizingMaskIntoConstraints="NO" id="HVn-8C-qtq">
+                                                                <rect key="frame" x="36" y="8" width="46" height="50"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        <constraints>
+                                                            <constraint firstItem="HVn-8C-qtq" firstAttribute="leading" secondItem="s6p-bM-xU2" secondAttribute="leading" constant="36" id="B9n-13-hlf"/>
+                                                            <constraint firstItem="O2T-TV-UPB" firstAttribute="top" secondItem="HVn-8C-qtq" secondAttribute="bottom" constant="8" id="PgH-kt-EJ2"/>
+                                                            <constraint firstAttribute="trailing" secondItem="HVn-8C-qtq" secondAttribute="trailing" constant="36" id="WEi-iv-FjE"/>
+                                                            <constraint firstItem="HVn-8C-qtq" firstAttribute="top" secondItem="s6p-bM-xU2" secondAttribute="top" constant="8" id="Z7d-G8-AuA"/>
+                                                            <constraint firstItem="O2T-TV-UPB" firstAttribute="centerX" secondItem="s6p-bM-xU2" secondAttribute="centerX" id="yzS-JK-eUw"/>
+                                                        </constraints>
                                                     </view>
                                                 </subviews>
                                             </stackView>
@@ -545,19 +555,24 @@
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WaC-OC-6rU">
                                                         <rect key="frame" x="0.0" y="0.0" width="118.5" height="90"/>
                                                         <subviews>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="café da manhã" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kps-NT-p23">
-                                                                <rect key="frame" x="0.0" y="53" width="106.5" height="21"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="café da manhã" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kps-NT-p23">
+                                                                <rect key="frame" x="13" y="66" width="92.5" height="19.5"/>
                                                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                                                 <color key="textColor" red="0.33333333329999998" green="0.33333333329999998" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_breakfast.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ibg-0T-ttM">
-                                                                <rect key="frame" x="35" y="10" width="35" height="35"/>
-                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_breakfast.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ibg-0T-ttM">
+                                                                <rect key="frame" x="36" y="8" width="46.5" height="50"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        <constraints>
+                                                            <constraint firstItem="Kps-NT-p23" firstAttribute="centerX" secondItem="WaC-OC-6rU" secondAttribute="centerX" id="3vv-wu-TAg"/>
+                                                            <constraint firstItem="Ibg-0T-ttM" firstAttribute="top" secondItem="WaC-OC-6rU" secondAttribute="top" constant="8" id="XFt-af-sDi"/>
+                                                            <constraint firstItem="Kps-NT-p23" firstAttribute="top" secondItem="Ibg-0T-ttM" secondAttribute="bottom" constant="8" id="jiE-yH-WCn"/>
+                                                            <constraint firstAttribute="trailing" secondItem="Ibg-0T-ttM" secondAttribute="trailing" constant="36" id="qbj-MQ-GmK"/>
+                                                            <constraint firstItem="Ibg-0T-ttM" firstAttribute="leading" secondItem="WaC-OC-6rU" secondAttribute="leading" constant="36" id="xXR-Wi-tgi"/>
+                                                        </constraints>
                                                     </view>
                                                 </subviews>
                                             </stackView>
@@ -639,7 +654,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vg6-2T-AWG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1361.25" y="478.52112676056339"/>
+            <point key="canvasLocation" x="1360.8" y="478.11094452773619"/>
         </scene>
     </scenes>
     <resources>
