Mudança na barra de pesquisa

--- a/AplicativoDeViagens/Telas/Base.lproj/Main.storyboard
+++ b/AplicativoDeViagens/Telas/Base.lproj/Main.storyboard
@@ -413,7 +413,6 @@
         <!--Detalhes Viagens View Controller-->
         <scene sceneID="2vb-xw-1MF">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Vg6-2T-AWG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="detalhes" id="dkB-YA-gDo" customClass="DetalhesViagensViewController" customModule="AplicativoDeViagens" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zn1-cp-g0l">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -618,11 +617,14 @@
                                                         <rect key="frame" x="0.0" y="78" width="355" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
+                                                        <connections>
+                                                            <action selector="textFieldEntrou:" destination="dkB-YA-gDo" eventType="editingDidBegin" id="Moa-yy-MYh"/>
+                                                        </connections>
                                                     </textField>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yew-3q-4wD">
                                                         <rect key="frame" x="0.0" y="117" width="355" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="723-kW-xVN">
                                                         <rect key="frame" x="0.0" y="156" width="355" height="29"/>
@@ -666,9 +668,10 @@
                         <outlet property="labelPrecoPacoteViagem" destination="3Fa-TN-lTn" id="5uK-YE-jdV"/>
                         <outlet property="labelTituloPacoteViagem" destination="bvw-E1-0je" id="59u-IF-ML1"/>
                         <outlet property="scrollprincipal" destination="9kz-Dd-fpd" id="ero-e6-Fa7"/>
-                        <outlet property="testeContraint" destination="bMc-JF-Sq7" id="2pB-uc-dVB"/>
+                        <outlet property="textFieldData" destination="O0g-0M-d1W" id="piR-Ha-jfM"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vg6-2T-AWG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1360.8" y="478.11094452773619"/>
         </scene>
